[gd_scene load_steps=56 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/Player_walk.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/Player_Sword.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/Player_Idle.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/Player_Axe.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/Player_Carry.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/Player_Fish.png" type="Texture" id=7]
[ext_resource path="res://Player/ItemBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Bobber.tscn" type="PackedScene" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 0.0

[sub_resource type="Animation" id=25]
resource_name = "AttackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackAnimationFinish"
} ]
}

[sub_resource type="Animation" id=26]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackAnimationFinish"
} ]
}

[sub_resource type="Animation" id=27]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackAnimationFinish"
} ]
}

[sub_resource type="Animation" id=28]
resource_name = "AttackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackAnimationFinish"
} ]
}

[sub_resource type="Animation" id=36]
resource_name = "FishDown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FishSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=37]
resource_name = "FishLeft"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FishSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Bobber")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "left" ],
"method": "run_tween"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ShowBobber"
} ]
}

[sub_resource type="Animation" id=38]
resource_name = "FishRight"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FishSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "ShowBobber"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Bobber")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "right" ],
"method": "run_tween"
} ]
}

[sub_resource type="Animation" id=39]
resource_name = "FishUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FishSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleDown"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleLeft"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleRight"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleUp"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WalkSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("IdleSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FishSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "WalkDown"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WalkSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "WalkLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WalkSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29, 30, 31, 24 ]
}

[sub_resource type="Animation" id=2]
resource_name = "WalkRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WalkSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23, 16 ]
}

[sub_resource type="Animation" id=10]
resource_name = "WalkUp"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("WalkSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 8 ]
}

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=33]
blend_point_0/node = SubResource( 29 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 30 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 31 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 32 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "FishLeft"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "FishDown"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "FishRight"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "FishUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=44]
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachine" id=23]
states/Attack/node = SubResource( 33 )
states/Attack/position = Vector2( 796, 341 )
states/Fish/node = SubResource( 44 )
states/Fish/position = Vector2( 574, 183 )
states/Idle/node = SubResource( 15 )
states/Idle/position = Vector2( 796, 183 )
states/Run/node = SubResource( 20 )
states/Run/position = Vector2( 1109, 183 )
transitions = [ "Idle", "Run", SubResource( 21 ), "Run", "Idle", SubResource( 22 ), "Idle", "Attack", SubResource( 34 ), "Attack", "Idle", SubResource( 35 ), "Fish", "Idle", SubResource( 45 ), "Idle", "Fish", SubResource( 46 ) ]
start_node = "Idle"
graph_offset = Vector2( 181, 7 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bobber" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 0, -17 )

[node name="AttackSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
offset = Vector2( 0, -8 )
hframes = 4
vframes = 4
frame = 1

[node name="AxeSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
texture = ExtResource( 5 )
offset = Vector2( 0, -8 )
hframes = 5
vframes = 4

[node name="FishSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
texture = ExtResource( 7 )
offset = Vector2( 0, -4 )
hframes = 5
vframes = 4
frame = 1

[node name="WalkSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
hframes = 8
vframes = 4
frame = 18

[node name="CarrySprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -4 )
texture = ExtResource( 6 )
offset = Vector2( 0, -8 )
hframes = 8
vframes = 4

[node name="IdleSprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 4 )
offset = Vector2( 0, -8 )
hframes = 8
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 25 )
anims/AttackLeft = SubResource( 26 )
anims/AttackRight = SubResource( 27 )
anims/AttackUp = SubResource( 28 )
anims/FishDown = SubResource( 36 )
anims/FishLeft = SubResource( 37 )
anims/FishRight = SubResource( 38 )
anims/FishUp = SubResource( 39 )
anims/IdleDown = SubResource( 4 )
anims/IdleLeft = SubResource( 5 )
anims/IdleRight = SubResource( 6 )
anims/IdleUp = SubResource( 7 )
anims/RESET = SubResource( 3 )
anims/WalkDown = SubResource( 8 )
anims/WalkLeft = SubResource( 9 )
anims/WalkRight = SubResource( 2 )
anims/WalkUp = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 23 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 24 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Fish/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )

[node name="UI" type="Node2D" parent="."]
z_index = 1

[node name="ItemBar" parent="UI" instance=ExtResource( 8 )]
margin_left = 59.0
margin_top = 76.0
margin_right = 59.0
margin_bottom = 76.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 2
current = true
